# Node-X-engine

./: .gitignore  LICENSE  README.md  yolo_infer.py
scripts/: build.sh
src/cpp/: CMakeLists.txt  server.cpp  trt_engine.h
src/proto/: yolo.proto
src/python/: client.py  requirements.txt  yolo_pb2.py  yolo_pb2_grpc.py
